# poppler-wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  installLibs.sh  main.cpp  workspace.code-workspace
.github/workflows/: ci.yml
cmake/: FindPopplerCpp.cmake  poppler-cpp-config.cmake
dotnet/: .editorconfig  dotnet.sln
dotnet/console-app/: Platform.props  PopplerNative.cs  Program.cs  Wrapper.targets  console-app.csproj
dotnet/console-app/runtimes/: .gitignore
dotnet/console-app/runtimes/osx-x64/: libwrapper.dylib
dotnet/poppler-lib/: Document.cs  DocumentSafeHandle.cs  Page.cs  PageSafeHandle.cs  PopplerNative.cs  poppler-lib.csproj
dotnet/poppler-lib/runtimes/osx-x64/: libwrapper.dylib
dotnet/test-poppler-lib/: PdfToTextTests.cs  test-poppler-lib.csproj
dotnet/test-poppler-lib/assets/golden-data/: test.txt
poppler-wrapper-lib/: CMakeLists.txt  DEVELOPMENT_NOTES.md  README.md  TEST-DEBUGGING-TIPS.md  build-poppler.sh  install-dev-deps.sh  installLibs.sh  run-cmake.sh  run-tests-valgrind.sh  run-tests.sh
poppler-wrapper-lib/test-assets/golden-data/: WithActualText.txt  rbc.txt
poppler-wrapper-lib/test-exec/: CMakeLists.txt  helpers.cpp  helpers.h  main.cpp  wrapper_tests.cpp
poppler-wrapper-lib/tests/: CMakeLists.txt  document_metadata_tests.cpp  helpers.cpp  helpers.h  pagetests.cpp  wrapper_tests.cpp
poppler-wrapper-lib/tests/test-helpers/: document_helpers.cpp  document_helpers.h  page_helpers.cpp  page_helpers.h  utilities.cpp  utilities.h
poppler-wrapper-lib/wrapperLib/: CMakeLists.txt  document.cpp  page.cpp  wrapper.cpp
poppler-wrapper-lib/wrapperLib/include/wrapper/: wrapper.h
test-exec/: CMakeLists.txt  main.cpp
wrapperLib/: CMakeLists.txt  wrapper.cpp  wrapper_version.h.in
wrapperLib/include/wrapper/: wrapper-private.h  wrapper.h
